crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_name_shared_across_tables_snapshot@enum_name_shared_across_tables_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
enum OrdersStatus {
  PENDING @map("pending")
  SHIPPED @map("shipped")
}

model Orders {
  id Int @id
  status OrdersStatus

  @@map("orders")
}

enum TasksStatus {
  TODO @map("todo")
  DONE @map("done")
}

model Tasks {
  id Int @id
  status TasksStatus

  @@map("tasks")
}
