crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_name_shared_across_tables_snapshot@enum_name_shared_across_tables_SqlModel.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

import enum

from sqlmodel import Field, SQLModel


class Status(str, enum.Enum):
    PENDING = "pending"
    SHIPPED = "shipped"

class Orders(SQLModel, table=True):
    __tablename__ = "orders"

    id: int = Field(primary_key=True)
    status: Status = Field(...)

class Status(str, enum.Enum):
    TODO = "todo"
    DONE = "done"

class Tasks(SQLModel, table=True):
    __tablename__ = "tasks"

    id: int = Field(primary_key=True)
    status: Status = Field(...)
