crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_shared_snapshot@enum_shared_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 115
expression: rendered
---
export const docStatus = pgEnum("doc_status", ["draft", "published", "archived"]);

export const documents = pgTable("documents", {
  id: integer("id").notNull(),
  status: docStatus("status").notNull(),
  reviewStatus: docStatus("review_status"),
});
