crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__enum_shared_snapshot@enum_shared_Drizzle_pg.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const documentsDocStatus = pgEnum("documents_doc_status", ["draft", "published", "archived"]);

export const documents = pgTable("documents", {
  id: integer("id").notNull(),
  status: documentsDocStatus("status").notNull(),
  reviewStatus: documentsDocStatus("review_status"),
});
